Fixing text too long

--- a/tchat/static/css/main.css
+++ b/tchat/static/css/main.css
@@ -54,7 +54,7 @@
     color: #fff !important;
     border-radius: 20px 20px 3px 20px;
     display: block;
-    max-width: 75%;
+    max-width: 75vw;
     padding: 7px 13px 7px 13px;
 }
 
@@ -73,7 +73,7 @@
     color: #000 !important;
     border-radius: 20px 20px 20px 3px;
     display: block;
-    max-width: 75%;
+    max-width: 75vw;
     padding: 7px 13px 7px 13px;
 }
 
@@ -105,6 +105,10 @@
     background-color: #2285d5;
 }
 
+.list-group-item {
+    overflow-y: hidden;
+}
+
 @media (min-width: 768px) {
     
     .bd-placeholder-img-lg {
@@ -113,6 +117,10 @@
 
     .message-box {
         margin-left: 380px;
+    }
+
+    .balon1 span, .balon2 span {
+        max-width: calc(75vw - 380px);
     }
     
 }
